@@ -20,6 +20,8 @@ static int sceneIdx=-1;
 static NSString *transitions[] = {
 
 	@"TexturePVRRGBA4444",
+	@"TexturePVRRGBA4444GZ",
+	@"TexturePVRRGBA4444CCZ",
 
 	@"TextureAlias",
 	@"TextureMipMap",
@@ -34,6 +36,8 @@ static NSString *transitions[] = {
 	@"TexturePVRRGBA8888",
 	@"TexturePVRBGRA8888",
 	@"TexturePVRRGBA4444",
+	@"TexturePVRRGBA4444GZ",
+	@"TexturePVRRGBA4444CCZ",
 	@"TexturePVRRGBA5551",
 	@"TexturePVRRGB565",
 	@"TexturePVRA8",
@@ -642,7 +646,7 @@ Class restartAction()
 	[super onEnter];
 	CGSize s = [[CCDirector sharedDirector] winSize];
 	
-	CCSprite *img = [CCSprite spriteWithFile:@"test_image_rgba4444.pvr.gz"];
+	CCSprite *img = [CCSprite spriteWithFile:@"test_image_rgba4444.pvr"];
 	img.position = ccp( s.width/2.0f, s.height/2.0f);
 	[self addChild:img];
 	
@@ -653,6 +657,67 @@ Class restartAction()
 	return @"PVR + RGBA 4444 Test";
 }
 @end
+
+#pragma mark -
+#pragma mark TexturePVR RGBA4444GZ
+
+// Image generated using PVRTexTool:
+// http://www.imgtec.com/powervr/insider/powervr-pvrtextool.asp
+
+@implementation TexturePVRRGBA4444GZ
+-(void) onEnter
+{
+	[super onEnter];
+	CGSize s = [[CCDirector sharedDirector] winSize];
+	
+	CCSprite *img = [CCSprite spriteWithFile:@"test_image_rgba4444.pvr.gz"];
+	img.position = ccp( s.width/2.0f, s.height/2.0f);
+	[self addChild:img];
+	
+}
+
+-(NSString *) title
+{
+	return @"PVR + RGBA 4444 + GZ Test";
+}
+
+-(NSString *) subtitle
+{
+	return @"This is a gzip PVR image";
+}
+
+@end
+
+#pragma mark -
+#pragma mark TexturePVR RGBA4444CCZ
+
+// Image generated using PVRTexTool:
+// http://www.imgtec.com/powervr/insider/powervr-pvrtextool.asp
+
+@implementation TexturePVRRGBA4444CCZ
+-(void) onEnter
+{
+	[super onEnter];
+	CGSize s = [[CCDirector sharedDirector] winSize];
+	
+	CCSprite *img = [CCSprite spriteWithFile:@"test_image_rgba4444.pvr.ccz"];
+	img.position = ccp( s.width/2.0f, s.height/2.0f);
+	[self addChild:img];
+	
+}
+
+-(NSString *) title
+{
+	return @"PVR + RGBA 4444 + CCZ Test";
+}
+
+-(NSString *) subtitle
+{
+	return @"This is a ccz PVR image";
+}
+
+@end
+
 
 #pragma mark -
 #pragma mark TexturePVR RGB565
