@@ -1,0 +1,3 @@
+#!/bin/bash
+gcc ccz.c -lz -o ccz 
+
